--- a/fronted/singlePage.html
+++ b/fronted/singlePage.html
@@ -195,8 +195,8 @@
     </div>
     <div class="container-fluid">
       <div class="row justify-content-center mt-5 fw-light">
-        <div class="col-10" aria-label="breadcrumb" id="breadcrumbsContainer">
-          <ol class="breadcrumb align-self-center ">
+        <div class="col-10" aria-label="breadcrumb">
+          <ol class="breadcrumb align-self-center " id="breadcrumbsContainer">
             <li class="breadcrumb-item active  pointer" aria-current="page">Racebook</li>
             <li class="breadcrumb-item active  pointer" aria-current="page">Home</li>
           </ol>
@@ -760,6 +760,19 @@ enlaceCatalogoEventos.addEventListener('click', (e) => {
   //despliego el catalogo de eventos
   catalogoEventos.classList.remove('hidden');
 })
+
+//breadcrumbs
+//home -> catalogo de eventos -> detalle de evento -> detalle de carrera
+//home -> cuenta de usuario -> editar cuenta de usuario
+//home -> cuenta de organizador -> eventos registrados -> detalle de evento -> detalle de carrera
+//home -> cuenta de organizador -> eventos registrados -> detalle evento -> editar evento
+//home -> cuenta de organizador -> eventos registrados -> detalle evento -> detalle carrera -> editar carrera
+
+//////////////////////////
+//CUENTA DE USUARIO 
+/////////////////////////
+
+
 //////////////////////////
 //REG EXP
 /////////////////////////
